# movies

./: .pre-commit-config.yaml  LICENSE  alembic.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
alembic/: env.py
alembic/versions/: 9912396391c9_init_db.py
graphql/: company.graphql  genre.graphql  movie.graphql  mutation.graphql  query.graphql  user.graphql
movies/: app.py  constants.py  query.py  settings.py
movies/api/: app.py
movies/core/: constants.py
movies/core/clients/: tmdb.py
movies/core/dataloaders/: base.py  company_loader.py  movie_loader.py
movies/core/db/: base.py  crud.py  session.py
movies/core/db/models/: genre.py  movie.py
movies/core/entities/: company.py  genre.py  movie.py
movies/core/resolvers/: base.py  company.py  movie.py  query.py
movies/core/resolvers/mutations/: movie.py
movies/entities/: genre.py  movie.py
movies/entities/db/: base.py  crud.py  genre.py  movie.py  session.py
movies/entities/db/models/: base_class.py  genre.py  movie.py
movies/scripts/: movies.json  populate_movies.py
tests/: conftest.py  settings.py
tests/api/: app_test.py  app_tests.py
tests/core/dataloders/: company_loader_test.py  company_loader_tests.py  movie_loader_test.py
tests/core/resolvers/mutations/: movie_test.py
tests/fixtures/vcr_cassettes/: movie_mutations.yaml  movies.yaml
