[tool.poetry]
name = "movies"
version = "0.1.0"
description = ""
authors = ["Jiatu Liu"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ariadne = "0.11.0"
uvicorn = "0.11.8"
fastapi = "0.60.1"
python-multipart = "0.0.7"
sqlalchemy = "1.3.18"
alembic = "1.4.2"
psycopg2 = "2.8.5"
aiodataloader = "^0.2.0"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "5.2.2"
pre-commit = "2.6.0"
pytest-asyncio = "^0.14.0"
aresponses = "^2.0.0"
pytest-mock = "^3.2.0"
httpx = "^0.14.0"
sqlalchemy-utils = "^0.36.8"
vcrpy = "^4.1.0"

[tool.isort]
profile = "black"
src_paths = ["movies/movies", "tests"]
multi_line_output = 3
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
